# regex-automata-macro

./: Cargo.toml  README.md
examples/: basic.rs
regex-automata-proc-macro/: Cargo.toml
regex-automata-proc-macro/src/: lib.rs
src/: lib.rs
